# botkube

./: Cargo.toml  README.md
config/: Cargo.toml
config/src/: config.rs  lib.rs
config/tests/: Configuration.toml
src/: lib.rs  main.rs
