[package]
name = "botkube-rs"
version = "0.1.0"
edition = "2021"
categories = ["bot", "kubernetes"]
authors = ["Iago Sousa <me@iagosousa.com>"]
description = "Botkube using Rust"
keywords = ["botkube", "kubernetes"]
repository = "https://github.com/iagosrodrigues/botkube-rs"
license = "MIT"

[workspace]
members = ["watcher", "config"]

[dependencies]
env_logger = { version = "0.9.3" }
log = { version = "0.4", features = ["std", "serde"] }
tokio = { version = "1", features = ["full"] }
watcher = { path = "watcher" }
config = { path = "config" }
messenger = { path = "messenger" }

# futures = { version = "0.3" }

# Telegram
#teloxide = { version = "0.11", features = ["macros", "auto-send"] }
#
## Kubernetes

#
## File
#
## Serialize and deserialize
#serde_json = { version = "1.0.87" }
#
## Http Client and Server
#hyper-tls = { version = "0.5.0" }
#hyper = { version = "0.14", features = ["full"] }
#
## Async
#clap = { version = "4.0.18", features = ["derive"] }
